--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "react-uuid": "^1.0.2",
     "swiper": "^6.6.2",
+    "uuidv4": "^6.2.11",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
